fix horizontal overflow on planet cards

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,7 +6,7 @@
 
 ul {
   list-style: none;
-  width: 100%;
+  width: 97%;
   height: 100%;
   display: inline-block; }
 
